package gameLaby.laby;

public interface Entite {

    public boolean etrePresent(int dx, int dy);

    public int getX();

    public int getY();


}
